added OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- BEGIN (write your solution here) -->
-<html>
+<html prefix="og: http://ogp.me/ns#">
 
   <head>
-    <meta charset="utf-8">
     <title>M.Forman</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta property="og:title" content="Michael Forman" />
+    <meta property="og:description" content="web developer" />
+    <meta property="og:image" content="Foreman.jpg" />
   </head>
 
   <body>
